[project]
name = "h2yaml"
version = "0.1"
requires-python = ">= 3.10"
dependencies = [
  "pyyaml",
  "libclang",
]

[project.scripts]
h2yaml = "h2yaml:main"

[project.optional-dependencies]
test = [
  "type_enforced",
  "pytest",
  "pytest-icdiff",
  "coverage"
]

[tool.setuptools]
py-modules = ["h2yaml"]
