[project]
name = "h2yaml"
version = "0.2.1"
requires-python = ">= 3.11"
dependencies = [
  "pyyaml",
  "libclang",
]

[project.scripts]
h2yaml = "h2yaml:main"

[tool.setuptools]
py-modules = ["h2yaml"]

[dependency-groups]
test = [
  "pytest",
  "pytest-icdiff",
  "coverage"
]
typing = ["type_enforced"]
typing-test = [{include-group = "typing"}, {include-group = "test"}]
