[project]
name = "h2yaml"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
  "pyyaml",
  "libclang",
]

[project.scripts]
h2yaml = "h2yaml:main"

[tool.setuptools]
py-modules = ["h2yaml"]

[tool.setuptools.dynamic]
version = {attr = "h2yaml.__version__"}

[dependency-groups]
test = [
  "pytest",
  "pytest-icdiff",
  "coverage",
  "deepdiff"
]
typing = ["type_enforced"]
typing-test = [{include-group = "typing"}, {include-group = "test"}]
